# line-numbers

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: coverage.yml  release.yml  test.yml
examples/: simple.rs
src/: lib.rs
