[package]
name = "line-numbers"
description = "Find line numbers in strings by byte offsets, quickly"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/wilfred/line-numbers"
license = "MIT"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
rust-version = "1.58.0"
categories = ["text-processing"]

[dependencies]
